[package]
name = "kdniao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
md5 = "0.7.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
calamine = "0.18.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.67"
serde_urlencoded = "0.7.0"
base64 = "0.13.0"
simple_excel_writer = "0.1.7"
chrono = "0.4.19"